--- a/docroot/profiles/wetkit/themes/wetkit_bootstrap/sass/tiffin/components/_overwrite.scss
+++ b/docroot/profiles/wetkit/themes/wetkit_bootstrap/sass/tiffin/components/_overwrite.scss
@@ -32,6 +32,6 @@
 
 #tiffinClickMap {
   @media (max-width: 992px) {
-    height: 100px;
+    height: 100px !important;
   }
 }
